2004-10-10  Hynek Hanke  <hanke@chopin>

	* src/server/server.c (serve): Substitute binary zeros with a '?'
	in incomming data.

	* src/python/speechd/_test.py (Client.check_it): Some more tests.

	* src/python/speechd/client.py (Client.char): New method.
	(Client.key): New method.
	(Client.sound_icon): New method.
	(Client.pause): New method.
	(Client.resume): New method.
	(Client.set_punctuation): New method.
	(Client.set_spelling): New method.
	(Client.set_cap_let_recogn): New method.
	(Client.set_voice): New method.
	(Client.set_volume): New method.
	(Client.block_end): New method.
	(Client.block_begin): New method.

	* src/python/speechd/client.py (Client.say_char): New function.
	(Client.cancel): New function.
	(Client.__set_priority): New function.
	(Client.say): Use __set_priority.
	(Client.get_client_list): Commented out since not active in current SSIP.

	* src/python/speechd/client.py (_SSIP_Connection.send_data): Correct escaping of the end-of-data sequence.

	* src/python/speechd/_test.py (tests): Added test for escaping dot.

	* configure.in, all Makefiles.am: Don't link unnecessary libraries.
	
2004-08-12  Milan Zamazal  <pdm@brailcom.org>

	* configure.in (AC_OUTPUT): spdsend added.

	* src/c/clients/spdsend/Makefile: Removed.

	* src/c/clients/spdsend/Makefile.am: New file.

	* src/c/clients/Makefile.am (SUBDIRS): `spdsend' added.

2004-08-04  Hynek Hanke  <hanke@chopin>

	* src/server/set.c (CHECK_SET_PAR): Report name of the parameter.
	(update_cl_settings): Update also volume.

2004-07-22  root  <hanke@chopin>

	* src/modules/festival_client.c (client_accept_waveform): Only fill in wave->samples if wave->num_samples
	is more than 0.

2004-07-21  Hynek Hanke  <hanke@chopin>

	* src/modules/festival.c (cache_insert): Don't copy the fwave structure, just save the pointer.
	(module_speak): Removed redudant debugging messages.

2004-07-21  Hynek Hanke  <hanke@chopin>

	* src/modules/Makefile.am (AM_CFLAGS): $(spdlibdir) not ($spdlibdir)
